--- a/css/distribution.css
+++ b/css/distribution.css
@@ -1,8 +1,105 @@
-*{
-    background-color: #0c1219;
-}
 
 #distribution{
     background-image: url('../img/bg.png');
     height: 1052px;
 }
+#distribution-area{
+    width: 1100px;
+    height: 1052px;
+    margin: auto;
+}
+
+#distribution .swiper-button2 {
+    position: relative;
+    bottom: 225px;
+  }
+  .swiper-button2 .swiper-button-next{
+    position: absolute;
+    right: -45px;
+  }
+  
+  .swiper-button2 .swiper-button-prev{
+    position: absolute;
+    left: -45px;
+  }
+
+  #distribution .container {
+    max-width: 1110px !important;
+    max-height: 655px !important;
+    /* width: 100%; */
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  #distribution .header .container {
+    height: 55.4px;
+    display: flex;
+    justify-content: start;
+  }
+  #distribution .swiper {
+    width: 100%;
+    margin: 20px auto;
+  }
+  
+  #distribution .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 0px 12px;
+    height: calc(100% - 2px) !important;
+  }
+  
+  
+  #distribution .swiper-button-next,
+  .swiper-button-prev {
+    color: #FFFFFF;
+    width: 27px !important;
+  }
+  
+  #distribution .card-body {
+    background: white;
+    max-width: 540px;
+    width: calc(100% - 2px);
+    border-radius: 3px;
+    border: 1px solid rgb(219, 219, 219);
+    box-shadow: none;
+    display: block;
+    min-width: 326px;
+    padding: 0px;
+  }
+  
+  #distribution .swiper-slide {
+    background: unset;
+  }
+  
+  .distribution-icon {
+    width: 30.05px;
+    height: 32px;
+    margin: 0 5px 0 0;
+  } 
+  
+  #distribution .title-text {
+    color: white;
+    float: right;
+  }
+  
+  #distribution .title-text-1 {
+    width: 56px;
+    height: 26px;
+    font-size: 14px;
+  }
+  
+  #distribution .title-text-2 {
+    width: 56px;
+    height: 14.4px;
+    font-size: 12px;
+  }
+  #distribution .img-w-h-border-img{
+    width: 350px;
+    height: 379px;
+  }
