--- a/css/swiperCss.css
+++ b/css/swiperCss.css
@@ -29,7 +29,7 @@ body {
   margin-left: auto;
 }
 
-.header {
+#social .header {
   height: 192px;
 }
 
@@ -87,7 +87,7 @@ body {
 }
 
 #social .swiper-button-next,
-.swiper-button-prev {
+#social .swiper-button-prev {
   color: #FFFFFF;
   width: 27px !important;
 }
