--- a/tiger.css
+++ b/tiger.css
@@ -14,38 +14,133 @@
     font-family: "Lato", sans-serif, Microsoft JhengHei, verdana;
     color: white;
 }
-
+#classic .drink-info{
+    display: flex;
+    margin-top: 25%;
+}
 #classic .cold-drink{
+    width: 10px;
+    height: 10px;
+    background-color: #00a199;
+    border-radius: 50%;
+}
+#classic .cold{
     font-size: 14.4px;
     color: #00a199;
-    margin-right: 10px;
 }
 #classic .hot-drink{
+    width: 10px;
+    height: 10px;
+    font-size: 14.4px;
+    background-color: #e95513;
+    border-radius: 50%;
+
+}
+#classic .hot{
     font-size: 14.4px;
     color: #e95513;
-}
 
+}
 #classic{
+    position: relative;
+}
+#classic .background{
     width: 100%;
+    height: 100vh;
     background-image: url(./images/background_img/about_bg.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
+}
+#classic .background2{
+    width: 100%;
+    height: 100vh;
+    background-image: url(./images/background_img/about_bg.png);
+    background-size:cover;
+    position: absolute;
+    top: 65%;
+    z-index: 2;
 }
 #classic .container{
-    max-width: 1200px;
+    max-width: 1040px;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+    position: relative;
 }
 #classic .title{
     padding-top: 50px;
     display: flex;
 }
 #classic .title img{
-    margin-top: 10px;
     width: 32px;
 }
 #classic .logo img{
-    width: 571px;
+    margin:5% auto;
+    width: 576px;
+    position: absolute;
+    left: calc(50% - (576px / 2));
+}
+#classic .tiger-drink{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+#classic .tiger-drink-logo img{
+    max-width: 350px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80%;
+}
+#classic .tiger-drink-logo {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+}
+
+#classic .cover {
+    content: '';
+    position: absolute;
+    width: 960px;
+    height: 960px;
+    border: 3px solid #333024; 
+    border-radius: 480px 480px 480px 480px; 
+    border-bottom-width: 0;
+    top: 38%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+#classic .drink-menu-title-1 {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: auto; 
+    gap: 10px;
+}
+#classic .drink-menu-title-2 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: auto; 
+    gap: 10px; 
+}
+#classic .drink-menu-box-gruop{
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+ }
+#classic .drink-menu-list{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #f4dd97;
+    padding: 20px;
+}
+#classic .drink-menu-box{
+    width: 255px;
+}
+#classic .cold-and-hot{
+    display: flex;
 }
