--- a/css/news.css
+++ b/css/news.css
@@ -49,7 +49,9 @@ height: 55.4px
     font-size: 12px;
 }
 
-.swiper-slide .card {
+#news .swiper-slide .card {
+    width: 592px !important;
+    height: 293px !important;
     flex-direction: row;
     background-color: transparent;
     color: white;
