--- a/css/news.css
+++ b/css/news.css
@@ -18,7 +18,7 @@
 }
 
 #news .swiper-slide{
-    padding: 24px;
+    padding: 24px 18px 24px 24px;
 }
 #news .title{
 height: 55.4px
@@ -114,7 +114,7 @@ height: 55.4px
 }
 
 
-.card-body{
+#news .card-body{
     width: 65%;
     display: flex;
     justify-content: space-around;
@@ -122,14 +122,22 @@ height: 55.4px
     padding: 20px;
 }
 
-.blog-name{
+#news .blog-name{
+    width: 342.2px;
+    height: 35.8px;
     font-size: 13px;
     padding: 10px 0 5px;
 }
 
-.card-title{
+#news .card-title{
+    width: 342.2px;
+    height: 24px;
     font-size: 15px;
     margin-bottom: 12px;
+}
+#news .card-content{
+    width: 342.2px;
+    height: 89.59px;
 }
 
 #news .swiper-button3 {
