第一週全部完成

--- a/css/distribution.css
+++ b/css/distribution.css
@@ -5,6 +5,7 @@ a {
 #distribution {
     background-image: url('../img/bg.png');
     height: 1052px;
+    background-color: #0c1219;
     position: relative;
 }
 
