--- a/css/swiperCss.css
+++ b/css/swiperCss.css
@@ -14,14 +14,74 @@ body {
   padding: 0;
 }
 
+@media(min-width:481px) {
+  .container {
+    width: 454px;
+  }
+
+  #social .card-body {
+    height: 400px !important;
+  }
+  #social .swiper-button-next,
+  #social .swiper-button-prev {
+    top: 146px !important;
+  }
+}
+
+
+@media(min-width:576px) {
+  .container {
+    width: 540px;
+  }
+
+  #social .card-body {
+    height: 450px !important;
+  }
+  #social .swiper-button-next,
+  #social .swiper-button-prev {
+    top: 100px !important;
+  }
+}
+
+@media(min-width:768px) {
+  .container {
+    width: 720px;
+  }
+
+  #social .card-body {
+    height: 540px !important;
+  }
+}
+
+@media(min-width:992px) {
+  #social .container {
+    width: 960px;
+  }
+
+  #social .card-body {
+    height: 656px !important;
+  }
+}
+
+@media(min-width:1200px) {
+  #social .container {
+    width: 1440px;
+  }
+
+  #social .card-body {
+    height: 550px !important;
+  }
+
+}
+
 #social {
   padding-bottom: 120px;
   background-color: #0c1219;
 }
 
 #social .container {
-  max-width: 1110px !important;
-  max-height: 655px !important;
+  max-width: 1110px;
+  max-height: 655px;
   /* width: 100%; */
   padding-right: 15px;
   padding-left: 15px;
@@ -88,6 +148,7 @@ body {
 
 #social .swiper-button-next,
 #social .swiper-button-prev {
+  position: absolute;
   color: #FFFFFF;
   width: 27px !important;
 }
@@ -105,6 +166,6 @@ body {
   border: 1px solid rgb(219, 219, 219);
   box-shadow: none;
   display: block;
-  min-width: 326px;
   padding: 0px;
+
 }
