--- a/css/distribution.css
+++ b/css/distribution.css
@@ -1,7 +1,7 @@
-
 a {
-    text-decoration:none;
+    text-decoration: none;
 }
+
 #distribution {
     background-image: url('../img/bg.png');
     height: 1052px;
@@ -38,7 +38,7 @@ a {
 
 #distribution .container {
     width: 1100px !important;
-    height: 209px !important;
+    max-height: 209px !important;
     /* width: 100%; */
     margin-right: auto;
     margin-left: auto;
@@ -90,6 +90,7 @@ a {
     min-width: 326px;
     padding: 0px;
 }
+
 #distribution .swiper-slide {
     background: unset;
 }
@@ -135,7 +136,7 @@ a {
     top: 10px;
 }
 
-#distribution .ask-icon{
+#distribution .ask-icon {
     position: absolute;
     width: 50px;
     height: 50px;
@@ -167,15 +168,16 @@ a {
     justify-content: start;
 }
 
-#distribution .commodity_sort{
+#distribution .commodity_sort {
     width: 352px;
     height: 32px;
     font-size: 20px;
     display: flex;
     justify-content: start;
 }
+
 #distribution .distribution_area_button {
-    height: 32px;
+    height: 45px;
     padding: 8px 30px;
     font-size: 20px;
     border: 1px solid #FFDD80;
@@ -186,11 +188,12 @@ a {
     transform: translateX(-50%);
 }
 
-#distribution .swiper-button-next:after,#distribution .swiper-button-prev:after{
+#distribution .swiper-button-next:after,
+#distribution .swiper-button-prev:after {
     display: none;
 }
 
-#distribution .next-prev-img{
+#distribution .next-prev-img {
     width: 22px;
     height: 37px;
 }
@@ -207,28 +210,62 @@ a {
     opacity: 0;
     transition: 1s;
 }
-#distribution .img-w-h-border-img:hover  .product_img_hover{
+
+#distribution .img-w-h-border-img:hover .product_img_hover {
     opacity: 0.8;
-    
+
 }
-#distribution .ask-icon-hover{
+
+#distribution .ask-icon-hover {
     position: absolute;
     width: 50px;
     height: 50px;
     right: 0px;
     top: 0px;
 }
-.commodity_more_button.btn{
-width: 124px;
-height: 48px;
-display: flex;
-justify-content: center;
-align-items: center;
-outline: #ffe282 3px solid;
-color: #ffe282;
-border-radius: 5px;
-position: absolute;
-top: calc(180px - 12px);
-left: calc(165px - 62px);
-font-size: 18px;
+
+.commodity_more_button.btn {
+    width: 124px;
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    outline: #ffe282 3px solid;
+    color: #ffe282;
+    border-radius: 5px;
+    position: absolute;
+    top: calc(180px - 12px);
+    left: calc(165px - 62px);
+    font-size: 18px;
+}
+
+@media(min-width:481px) {
+    #distribution-area {
+        width: 454px;
+    }
+}
+
+
+@media(min-width:576px) {
+    #distribution-area {
+        width: 540px;
+    }
+}
+
+@media(min-width:768px) {
+    #distribution-area {
+        width: 720px;
+    }
+}
+
+@media(min-width:992px) {
+    #distribution-area {
+        width: 960px;
+    }
+}
+
+@media(min-width:1200px) {
+    #distribution-area {
+        width: 1440px;
+    }
 }
