--- a/css/swiperCss.css
+++ b/css/swiperCss.css
@@ -15,13 +15,14 @@ body {
 }
 
 @media(min-width:481px) {
-  .container {
+  #social .container {
     width: 454px;
   }
 
   #social .card-body {
     height: 400px !important;
   }
+
   #social .swiper-button-next,
   #social .swiper-button-prev {
     top: 146px !important;
@@ -30,13 +31,14 @@ body {
 
 
 @media(min-width:576px) {
-  .container {
+  #social .container {
     width: 540px;
   }
 
   #social .card-body {
     height: 450px !important;
   }
+
   #social .swiper-button-next,
   #social .swiper-button-prev {
     top: 100px !important;
@@ -44,7 +46,7 @@ body {
 }
 
 @media(min-width:768px) {
-  .container {
+  #social .container {
     width: 720px;
   }
 
