--- a/tiger.css
+++ b/tiger.css
@@ -1,150 +1,93 @@
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
-
-/* 字體 */
-.inlinetext{
-    font-size: 14px;
-    font-family: "Lato", sans-serif, Microsoft JhengHei, verdana;
-    color: white;
-}
-.en-text{
-    font-size: 12px;
-    font-family: "Lato", sans-serif, Microsoft JhengHei, verdana;
-    color: white;
-}
-.text{
-    font-size: 14.4px;
-}
-.text1{
-    font-size: 20px;
-}
-#classic .df{
+.df{
     display: flex;
 }
-#classic .m3{
-    margin-top: 40px;
-}
-#classic .jb{
+.justbet{
     justify-content: space-between;
 }
-
-#classic .tt{
-    font-size: 18px;
-    color: #f4dd97;
+.text12{
+    font-size: 12px;
 }
-
-#classic .tg{
-    color: gray;
+.text14{
+    font-size: 14px;
 }
-
-
-
-
-
-
-
-
-
-
-#classic .background-top{
-    width: 100%;
-    height: 100vh;
-    background-image: url(./images/background_img/about_bg.png);
-    background-size:cover;
-    position: relative;
+.text14-4{
+    font-size: 14.4px;
 }
-#classic .background-down{
-    width: 100%;
-    height: 100%;
-    background-image: url(./images/background_img/about_bg.png);
-    background-size: 100% 200%;
-    background-repeat: repeat-y;
-    position: absolute;
-    top: 80%;
+.mgt40{
+    margin-top: 40px;
+}
+.mgt20{
+    margin-top: 20px;
+}
+.text20{
+    font-size: 20px;
+}
+#classic .menu{
+    min-width: 576px;
 }
 #classic .container{
-    max-width: 1140px;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+    padding: 40px;
 }
-#classic .title{
-    padding-top: 50px;
-    display: flex;
-}
-#classic .title img{
-    width: 32px;
-}
-#classic .logo-and-drink{
-    width: 100%;
-    height: 100vh;
-    margin-top: 5%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#classic .section_content {
     position: relative;
+    background-size: cover;
+    background-position: 100% 0;
+    padding-bottom: 80px;
+    z-index: 2;
+    background-image: url(/images/background_img/about_bg.png) !important;
+    margin-top: 0;
 }
-
-#classic .logo-and-drink img{
+ #classic .title img{
+    width: 32px;
+    margin-top: 10px;
+ }
+ #classic .menu-logo-group{
+    position: relative !important;
+ }
+ #classic .menu-logo{
+    display: block;
+    margin: 0 auto;
     max-width: 30vw;
     min-width: 250px;
-    filter: drop-shadow(0 0 10px #f4dd97);
-}
-#classic .logo{
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#classic .tiger-drink-logo{
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    width: 80%;
+    filter: drop-shadow(0 0 10px #f4dd97); 
+ }
+ #classic .menu-drink {
     position: relative;
-}
-#classic .tiger-drink-logo img{
+    z-index: 2;
+    display: block;
     max-width: 350px;
-    margin-top: 60px;
+    margin: 75px auto 0;
 }
-
-#classic .circle{
+#classic .drink-shape {
     position: absolute;
-    top: 10%;
-    left: 15%;
-    width: 70%;
-    height: 100%;
-    border-radius: 50%;
+    top: 0;
+    left: 25%;
+    height: 50%;
+    width: 50%;
+    overflow: hidden;
+}
+#classic .drink-circle {
+    width: 100%;
+    height: 600%;
     border: 1px solid #f4dd97;
+    border-radius: 100% 100% 0 100%/50%;
+    border-bottom: none;
 }
 #classic .drink-shadow {
     position: absolute;
-    top: 0%;
+    z-index: 1;
+    top: 50%;
     left: 0;
     width: 100%;
     height: 200px;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.5) 30%, rgba(0, 0, 0, 0.4) 40%, rgba(0, 0, 0, 0.2) 62%, rgba(0, 0, 0, 0.1) 76%, rgba(0, 0, 0, 0) 100%);
 }
-
-
-#classic .cold-hot-info{
-    width: 150px;
-    margin-top: 20%;
-    display: flex;
-    justify-content: space-between;
-}
-
-#classic .cold-hot-info .cold-drink-info {
-    color: #00A199;
-}
-
-#classic .cold-hot-info .hot-drink-info {
-    color: #E95513;
-}
-
 #classic .cold-drink-span {
     display: inline-block;
     background: #00A199;
@@ -161,47 +104,43 @@
     border-radius: 50%;
     margin-right: 15px;
 }
-#classic .menu-title1{
-    margin-top: 70px;
-    display: flex;
-    justify-content: space-around;
-
+#classic .cold-drink-info {
+    color: #00A199;
 }
-#classic .menu-title2{
-    margin-top: 70px;
-    display: flex;
-    justify-content: space-around;
+#classic .hot-drink-info {
+    margin-left: 30px;
+    color: #E95513;
+}
+#classic h4{
     text-align: center;
-    align-items: center;
-
 }
-#classic .gold-menu-border{
+#classic li{
+    list-style: none;
+}
+#classic .gold-border{
+    margin-top: 50px;
     border: 1px solid #f4dd97;
-    padding: 0px 20px 40px 20px;
+    padding: 0 20px 40px 20px;
+}
+#classic .menu-type{
+    margin-top: 40px;
+    padding: 40px;
 }
 
-#classic .gold-menu-border-group{
-    margin-top: 70px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 30px;
+#classic .small-dot {
+    margin-top: 6px;
 }
-#classic .gold-menu-border-group1{
-    margin-top: 70px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 30px;
+#classic .small-dot div.cold {
+    background: #00A199;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-right: 5px;
 }
-#classic .cold-hot-dots{
-    display: flex;
-}
-#classic .down-menu{
-    width: 100%;
-    padding: 0 15%;
-}
-#classic .intro{
-    margin-top: 5%;
-}
-#classic .intro img{
-    width: 50px;
+#classic .small-dot div.hot {
+    background: #E95513;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-right: 5px;
 }
