--- a/tiger.css
+++ b/tiger.css
@@ -3,12 +3,18 @@
     margin: 0;
     padding: 0;
 }
+.pd{
+    padding: 30px 0;
+}
 .df{
     display: flex;
 }
 .justbet{
     justify-content: space-between;
 }
+.text-height{
+    line-height: 30px;
+} 
 .text12{
     font-size: 12px;
 }
@@ -17,6 +23,14 @@
 }
 .text14-4{
     font-size: 14.4px;
+}
+.text18{
+    font-size: 18px;
+    color: #f4dd97;
+}
+.text21-6{
+    margin-bottom: 10px;
+    font-size: 21.6px;
 }
 .mgt40{
     margin-top: 40px;
@@ -27,8 +41,12 @@
 .text20{
     font-size: 20px;
 }
+.color-gray{
+    color: gray;
+    margin-top: 10px;
+}
 #classic .menu{
-    min-width: 576px;
+    
 }
 #classic .container{
     padding: 40px;
@@ -39,7 +57,7 @@
     background-position: 100% 0;
     padding-bottom: 80px;
     z-index: 2;
-    background-image: url(/images/background_img/about_bg.png) !important;
+    background-image: url(./images/background_img/about_bg.png) !important;
     margin-top: 0;
 }
  #classic .title img{
@@ -143,4 +161,61 @@
     height: 10px;
     border-radius: 50%;
     margin-right: 5px;
+}
+#classic .intro-logo{
+    width: 50px;
+    margin-right: 10px;
+}
+#classic .step-2{
+    margin: 50px 0;
+}
+#classic .parallax-1 img{
+    max-width: 576px;
+}
+#classic .parallax-2 img{
+    max-width: 576px;
+}
+#classic .parallax-block {
+    position: relative;
+    width: 100%;
+    height: 550px;
+}
+#classic .bg-wrap {
+    clip: rect(0, auto, auto, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#classic .bg {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    will-change: transform;
+}
+
+#classic .bg:first-child {
+    background-position: center 30%;
+}
+
+@media (min-width: 1920px){
+    #classic .container{
+        margin: 0 20%;
+    }
+    #classic .change{
+        display: flex;
+        flex: row;
+    }
+    #classic .menu-type{
+        max-width: 255px;
+    }
 }
