--- a/tiger.css
+++ b/tiger.css
@@ -3,45 +3,45 @@
     margin: 0;
     padding: 0;
 }
-.pd{
+#classic .pd{
     padding: 30px 0;
 }
-.df{
+#classic .df{
     display: flex;
 }
-.justbet{
+#classic .justbet{
     justify-content: space-between;
 }
-.text-height{
+#classic .text-height{
     line-height: 30px;
 } 
-.text12{
+#classic .text12{
     font-size: 12px;
 }
-.text14{
+#classic .text14{
     font-size: 14px;
 }
-.text14-4{
+#classic .text14-4{
     font-size: 14.4px;
 }
-.text18{
+#classic .text18{
     font-size: 18px;
     color: #f4dd97;
 }
-.text21-6{
+#classic .text21-6{
     margin-bottom: 10px;
     font-size: 21.6px;
 }
-.mgt40{
+#classic .mgt40{
     margin-top: 40px;
 }
-.mgt20{
+#classic .mgt20{
     margin-top: 20px;
 }
-.text20{
+#classic .text20{
     font-size: 20px;
 }
-.color-gray{
+#classic .color-gray{
     color: gray;
     margin-top: 10px;
 }
@@ -92,7 +92,7 @@
 }
 #classic .drink-circle {
     width: 100%;
-    height: 600%;
+    height: 500%;
     border: 1px solid #f4dd97;
     border-radius: 100% 100% 0 100%/50%;
     border-bottom: none;
@@ -105,6 +105,10 @@
     width: 100%;
     height: 200px;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.5) 30%, rgba(0, 0, 0, 0.4) 40%, rgba(0, 0, 0, 0.2) 62%, rgba(0, 0, 0, 0.1) 76%, rgba(0, 0, 0, 0) 100%);
+}
+
+#classic .cold-hot-info {
+    margin: 0 5%;
 }
 #classic .cold-drink-span {
     display: inline-block;
@@ -211,11 +215,38 @@
     #classic .container{
         margin: 0 20%;
     }
-    #classic .change{
-        display: flex;
-        flex: row;
+    #classic .menu-up{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
     #classic .menu-type{
         max-width: 255px;
     }
 }
+
+@media (min-width: 1200px){
+    #classic .menu-up{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    #classic .menu-up{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr; 
+    }
+    #classic .menu-type{
+        min-width: 255px;
+    }
+}
+
+@media (min-width: 992px){
+    #classic .menu-type{
+        min-width: 255px;
+    }
+}
+
+@media (min-width: 576px){
+    #classic .menu-type{
+        min-width: 255px;
+    }
+}
+
