--- a/css/banner.css
+++ b/css/banner.css
@@ -1,7 +1,7 @@
 #banner .container {
     position: relative;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 48vw;
     background-color: #0C1219;
     max-height: 924px;
     overflow: hidden;
