--- a/css/distribution.css
+++ b/css/distribution.css
@@ -74,11 +74,6 @@ a {
     }
 }
 
-#distribution .title {
-    padding: 100px 15px 0px 15px;
-    margin-bottom: 68px;
-}
-
 #distribution .header .container {
     height: 55.4px;
     display: flex;
@@ -124,11 +119,18 @@ a {
     background: unset;
 }
 
+#distribution .title {
+    padding: 100px 15px 0px 15px;
+    margin-bottom: 68px;
+    display: flex;
+}
+
 .distribution-icon {
     width: 30.05px;
     height: 32px;
     margin: 0 5px 0 0;
 }
+
 
 #distribution .title-text {
     color: white;
