--- a/css/media.css
+++ b/css/media.css
@@ -40,7 +40,7 @@
 }
 
 #media .title-img {
-    background-image: url(./media-img/icon1-4.png);
+    background-image: url(../images/nav/icon1-4.png);
     height: 32px;
     width: 32px;
     margin: 0px 4px 0px 0px;
