css呼叫路徑修正

--- a/css/franchisee.css
+++ b/css/franchisee.css
@@ -5,13 +5,12 @@
 
 
  #franchisee {
-    width: 100vw;
     height: 400px;
     padding: 50px 0 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(./images/background_img/about_bg.png);
+    background-image: url('../images/background_img/about_bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -32,7 +31,7 @@
 .join-us-img {
     width: 400px;
     height: 100px;
-    background-image: url(./images/franchisee/logo-Graphic.png);
+    background-image: url('../images/franchisee/logo-Graphic.png');
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -45,7 +44,7 @@
 .join-us-info {
     display: flex;
     flex-direction: row;
-    background-image: url(./images/franchisee/logo-Text.png);
+    background-image: url('../images/franchisee/logo-Text.png');
     width: 250px;
     height: 60px;
     background-repeat: no-repeat;
@@ -85,7 +84,7 @@
 }
 
 .franchisee-icon {
-    background-image: url("./images/nav/icon1-5.png");
+    background-image: url('./images/nav/icon1-5.png');
     background-size: contain;
     background-repeat: no-repeat;
     width: 32px;
