--- a/css/about.css
+++ b/css/about.css
@@ -6,10 +6,9 @@
 
 #about {
     /* height: 100vh; */
-    width: 100vw;
     padding-bottom: 120px;
     background-color: blanchedalmond;
-    background-image: url("images/background_img/about_bg.webp");
+    background-image: url('../images/background_img/about_bg.webp');
     background-size: cover;
     position: relative;
     background-position: center;
@@ -23,7 +22,7 @@
 
 .black-sugar {
     aspect-ratio: 23 / 4;
-    background-image: url("./images/background_img/section_header.webp");
+    background-image: url('../images/background_img/section_header.webp');
     background-color: transparent;
     background-size: contain;
     background-repeat: no-repeat;
@@ -38,7 +37,7 @@
 }
 
 .about-us-icon {
-    background-image: url("./images/nav/icon1-1.png");
+    background-image: url('../images/nav/icon1-1.png');
     background-size: contain;
     width: 32px;
     height: 32px;
