--- a/css/franchisee.css
+++ b/css/franchisee.css
@@ -84,7 +84,7 @@
 }
 
 .franchisee-icon {
-    background-image: url('./images/nav/icon1-5.png');
+    background-image: url('../images/nav/icon1-5.png');
     background-size: contain;
     background-repeat: no-repeat;
     width: 32px;
