--- a/css/about.css
+++ b/css/about.css
@@ -1,9 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
-/* CSS about */
-
 #about {
     /* height: 100vh; */
     padding-bottom: 120px;
@@ -18,6 +12,9 @@
 
 #about .container {
     width: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .black-sugar {
@@ -29,12 +26,12 @@
     z-index: 1;
 }
 
-.container-about-us-title {
-    /* display: flex; */
+/* .container-about-us-title {
+    display: flex;
     padding-left: 10%;
     position: absolute;
     top: 5%;
-}
+} */
 
 .about-us-icon {
     background-image: url('../images/nav/icon1-1.png');
@@ -138,7 +135,6 @@ h2 {
     right: 3%;
     top: 5%;
     z-index: 1;
-    overflow-x: hidden;
 }
 
 .about-us-scroll-img img {
