--- a/css/classic.css
+++ b/css/classic.css
@@ -1,9 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 #classic .pd {
     padding: 30px 0;
 }
@@ -82,6 +76,7 @@
 
 #classic .menu-logo-group {
     position: relative !important;
+    overflow: hidden;
 }
 
 #classic .menu-logo {
