--- a/css/media.css
+++ b/css/media.css
@@ -1,7 +1,7 @@
 #media .container {
     max-width: 1140px;
     margin: auto;
-    width: 100vw;
+    width: 100%;
     background-color: #0C1219;
 }
 
