--- a/css/news.css
+++ b/css/news.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 #news {
     background-color: #0c1219;
     padding-bottom: 60px;
@@ -49,7 +45,7 @@
     height: 55.4px
 }
 
-.share-icon {
+#news .share-icon {
     width: 32px;
     height: 32px;
     margin: 3px 2px 0 0;
@@ -197,8 +193,8 @@
     bottom: 340px;
 }
 
-.swiper-button3 .swiper-button-next,
-.swiper-button3 .swiper-button-prev {
+#news .swiper-button3 .swiper-button-next,
+#news .swiper-button3 .swiper-button-prev {
     position: absolute;
     top: 190px;
 }
