--- a/css/social.css
+++ b/css/social.css
@@ -1,19 +1,3 @@
-html,
-body {
-  position: relative;
-  height: 100%;
-}
-
-
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-}
-
 @media(min-width:481px) {
   #social .container {
     width: 454px;
@@ -118,7 +102,7 @@ body {
   font-size: 12px;
 }
 
-.ig-icon {
+#social .ig-icon {
   width: 32px;
   height: 32px;
   margin: 4px 6px 0 0;
@@ -153,8 +137,8 @@ body {
   width: 27px !important;
 }
 
-.swiper-button-next:after,
-.swiper-button-prev:after {
+#social .swiper-button-next:after,
+#social .swiper-button-prev:after {
   width: 27px;
 }
 
